--- a/apps/rettangoli.dev/templates/fe-documentation.yaml
+++ b/apps/rettangoli.dev/templates/fe-documentation.yaml
@@ -3,21 +3,20 @@
         - $partial: seo1
           page: ${page}
           seo: ${seo}
-        - link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc6/dist/themes/base.css":
-        - link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc6/dist/themes/theme-rtgl-slate.css":
+        - link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc7/dist/themes/base.css":
+        - link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc7/dist/themes/theme-rtgl-slate.css":
+        - link rel="stylesheet" href="/public/base.css":
         - script src="https://cdn.jsdelivr.net/npm/construct-style-sheets-polyfill@3.1.0/dist/adoptedStyleSheets.min.js":
-        - script src="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc6/dist/rettangoli-iife-ui.min.js":
+        - script src="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc7/dist/rettangoli-iife-ui.min.js":
         - script src="/public/rtgl-icons.js":
+        - script src="/public/docs-mobile.js":
 
     - body.dark:
-        - $partial: mobile-nav1
-          headerLabel: ${feDocs.header.label}
-          headerHref: ${feDocs.header.href}
-          header: ${feDocs.header}
-          items: ${feDocs.items}
-          sidebarId: ${sidebarId}
-
         - rtgl-view bgc="bg" w="f" d=h:
+            - $partial: docs-mobile-shell
+              sidebarId: ${sidebarId}
+              header: ${feDocs.header}
+              items: ${feDocs.items}
             - 'rtgl-view md-hide pos=fix h=100vh bgc=bg style="left: 0"':
                 - rtgl-sidebar selected-item-id=${sidebarId} header="${encodeURIComponent(jsonStringify(feDocs.header))}" items="${encodeURIComponent(jsonStringify(feDocs.items))}":
             - rtgl-view md-hide xl-show hide w=272:
@@ -29,5 +28,3 @@
                     - rtgl-view h=200:
             - 'rtgl-view xl-hide style="position: fixed; right: 0"':
                 - rtgl-page-outline id="page-outline" target-id="content-container" scroll-container-id="window" offset-top="80":
-
-        - script src="/public/mobile-nav.js":
