--- a/apps/rettangoli.dev/templates/vt-documentation.yaml
+++ b/apps/rettangoli.dev/templates/vt-documentation.yaml
@@ -5,18 +5,19 @@
           seo: ${seo}
         - link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc7/dist/themes/base.css":
         - link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc7/dist/themes/theme-rtgl-slate.css":
-        - link rel="stylesheet" href="/public/base.css":
         - script src="https://cdn.jsdelivr.net/npm/construct-style-sheets-polyfill@3.1.0/dist/adoptedStyleSheets.min.js":
         - script src="https://cdn.jsdelivr.net/npm/@rettangoli/ui@1.0.0-rc7/dist/rettangoli-iife-ui.min.js":
         - script src="/public/rtgl-icons.js":
-        - script src="/public/docs-mobile.js":
 
     - body.dark:
+        - $partial: mobile-nav1
+          headerLabel: ${vtDocs.header.label}
+          headerHref: ${vtDocs.header.href}
+          header: ${vtDocs.header}
+          items: ${vtDocs.items}
+          sidebarId: ${sidebarId}
+
         - rtgl-view bgc="bg" w="f" d=h:
-            - $partial: docs-mobile-shell
-              sidebarId: ${sidebarId}
-              header: ${vtDocs.header}
-              items: ${vtDocs.items}
             - 'rtgl-view md-hide pos=fix h=100vh bgc=bg style="left: 0"':
                 - rtgl-sidebar selected-item-id=${sidebarId} header="${encodeURIComponent(jsonStringify(vtDocs.header))}" items="${encodeURIComponent(jsonStringify(vtDocs.items))}":
             - rtgl-view md-hide xl-show hide w=272:
@@ -28,3 +29,5 @@
                     - rtgl-view h=200:
             - 'rtgl-view xl-hide style="position: fixed; right: 0"':
                 - rtgl-page-outline id="page-outline" target-id="content-container" scroll-container-id="window" offset-top="80":
+
+        - script src="/public/mobile-nav.js":
