--- a/apps/rettangoli.dev/templates/fe-documentation.yaml
+++ b/apps/rettangoli.dev/templates/fe-documentation.yaml
@@ -22,7 +22,7 @@
                 - rtgl-sidebar selected-item-id=${sidebarId} header="${encodeURIComponent(jsonStringify(feDocs.header))}" items="${encodeURIComponent(jsonStringify(feDocs.items))}":
             - rtgl-view md-hide xl-show hide w=272:
             - rtgl-view w="1fg" ah=c:
-                - rtgl-view pv="lg" lg-w="100vw" w="720" ph="xl" sv id="content-container":
+                - rtgl-view pv="lg" lg-w="100vw" w="720" ph="lg" sv id="content-container":
                     - rtgl-view hide md-show h=56:
                     - rtgl-text s="h1" mb="lg": ${title}
                     - "${content}"
