--- a/apps/rettangoli.dev/partials/mobile-nav1.yaml
+++ b/apps/rettangoli.dev/partials/mobile-nav1.yaml
@@ -2,8 +2,8 @@
     - 'a href="${headerHref}" style="text-decoration:none;display:contents;color:inherit;"':
         - rtgl-text s=md: ${headerLabel}
     - rtgl-view w=1fg:
-    - 'rtgl-view id="mobile-menu-btn" cur=pointer aria-label="Open docs navigation" aria-controls="mobile-nav-overlay" aria-expanded="false"':
-        - rtgl-svg id="mobile-menu-icon" wh=24 svg=menu cur=pointer:
+    - 'rtgl-view id="mobile-menu-btn" data-testid="mobile-menu-btn" cur=pointer aria-label="Open docs navigation" aria-controls="mobile-nav-overlay" aria-expanded="false"':
+        - rtgl-svg id="mobile-menu-icon" data-testid="mobile-menu-icon" wh=24 svg=menu cur=pointer:
 
 - 'rtgl-view id="mobile-nav-overlay" pos=fix w=f bgc=bg z=20 d=v hidden style="top:56px;left:0;height:calc(100vh - 56px)"':
     - rtgl-view sv w=f h=f:
