--- a/apps/rettangoli.dev/partials/navbar1.yaml
+++ b/apps/rettangoli.dev/partials/navbar1.yaml
@@ -1,4 +1,4 @@
-- rtgl-view bwb=xs w=f ah=c pos=fix bgc=bg:
+- 'rtgl-view data-mobile-autohide="true" bwb=xs w=f ah=c pos=fix bgc=bg':
     - rtgl-view md-w="100vw" lg-w="768" w="1024" d=h av=c h=64 ph=lg:
         - rtgl-text: ${title}
         - rtgl-view w=1fg:
