--- a/packages/rettangoli-ui/src/components/popoverInput/popoverInput.view.yaml
+++ b/packages/rettangoli-ui/src/components/popoverInput/popoverInput.view.yaml
@@ -19,7 +19,7 @@ refs:
         handler: handleSubmitClick
 template:
   - rtgl-view#textDisplay w=f cur=pointer:
-      - rtgl-text: ${value}
+      - rtgl-text c=${valueColor}: ${value}
   - rtgl-popover#popover ?open=${isOpen} x=${position.x} y=${position.y}:
       - rtgl-view g=md w=240 slot=content bgc=bg br=md:
           - rtgl-text: ${label}
