feat(be): implement runtime, contracts, and cli workflows

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /packages/rettangoli-ui/viz/static/public/main.js
 /packages/rettangoli-fe/dist
 /packages/rettangoli-fe/node_modules
+/packages/rettangoli-be/node_modules
 /packages/rettangoli-fe/.temp
 /packages/rettangoli-fe/viz/static/main.js
 /packages/rettangoli-fe/viz/static/main.js.map
@@ -22,3 +23,4 @@
 .claude/
 CLAUDE.md
 .temp
+**/.rtgl-be
