--- a/packages/rettangoli-be/examples/basic-app/package.json
+++ b/packages/rettangoli-be/examples/basic-app/package.json
@@ -5,6 +5,7 @@
   "version": "0.0.0",
   "description": "Design example app for rettangoli-be",
   "scripts": {
-    "check": "echo \"No runtime implementation yet\""
+    "check": "node ../../../rettangoli-cli/cli.js be check",
+    "build": "node ../../../rettangoli-cli/cli.js be build"
   }
 }
