test(be): add basic-app json-rpc e2e suite

--- a/packages/rettangoli-be/examples/basic-app/package.json
+++ b/packages/rettangoli-be/examples/basic-app/package.json
@@ -6,6 +6,7 @@
   "description": "Design example app for rettangoli-be",
   "scripts": {
     "check": "node ../../../rettangoli-cli/cli.js be check",
-    "build": "node ../../../rettangoli-cli/cli.js be build"
+    "build": "node ../../../rettangoli-cli/cli.js be build",
+    "test:e2e": "node ../../../rettangoli-cli/cli.js be build && node --test ./test/e2e/*.e2e.js"
   }
 }
