--- a/packages/rettangoli-be/package.json
+++ b/packages/rettangoli-be/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "ajv": "^8.17.1",
+    "chokidar": "^4.0.3",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
