feat(ui): add native temporal form fields and deterministic VT coverage (#299)
* feat(ui): add native temporal form fields and deterministic VT coverage

* test(vt): accept temporal screenshot baselines

* feat(ui): expose standalone temporal input primitives

* test(vt): stabilize temporal snapshots and refs

--- a/packages/rettangoli-ui/src/components/form/form.view.yaml
+++ b/packages/rettangoli-ui/src/components/form/form.view.yaml
@@ -56,6 +56,12 @@ template:
                                   - rtgl-text s=sm c=mu-fg: ${field.description}
                       - $if field.type == "input-text":
                           - rtgl-input#field${field._idx} data-field-name=${field.name} w=f type=${field._inputType} placeholder=${field.placeholder} ?disabled=${field._disabled}: null
+                      - $if field.type == "input-date":
+                          - rtgl-input-date#field${field._idx} data-field-name=${field.name} w=f min=${field.min} max=${field.max} placeholder=${field.placeholder} ?disabled=${field._disabled}: null
+                      - $if field.type == "input-time":
+                          - rtgl-input-time#field${field._idx} data-field-name=${field.name} w=f min=${field.min} max=${field.max} step=${field.step} placeholder=${field.placeholder} ?disabled=${field._disabled}: null
+                      - $if field.type == "input-datetime":
+                          - rtgl-input-datetime#field${field._idx} data-field-name=${field.name} w=f min=${field.min} max=${field.max} step=${field.step} placeholder=${field.placeholder} ?disabled=${field._disabled}: null
                       - $if field.type == "input-number":
                           - rtgl-input-number#field${field._idx} data-field-name=${field.name} w=f min=${field.min} max=${field.max} step=${field.step} placeholder=${field.placeholder} ?disabled=${field._disabled}: null
                       - $if field.type == "input-textarea":
