--- a/apps/rettangoli.dev/sites.config.yaml
+++ b/apps/rettangoli.dev/sites.config.yaml
@@ -1,3 +1,15 @@
+imports:
+  templates:
+    base: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc6/sites/templates/rettangoli-dev/base.yaml
+    documentation: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc6/sites/templates/rettangoli-dev/documentation.yaml
+    fe-documentation: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc6/sites/templates/rettangoli-dev/fe-documentation.yaml
+    sites-documentation: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc6/sites/templates/rettangoli-dev/sites-documentation.yaml
+    vt-documentation: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc6/sites/templates/rettangoli-dev/vt-documentation.yaml
+  partials:
+    seo1: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc6/sites/partials/rettangoli-dev/seo1.yaml
+    navbar1: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc6/sites/partials/rettangoli-dev/navbar1.yaml
+    mobile-nav1: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc6/sites/partials/rettangoli-dev/mobile-nav1.yaml
+
 markdownit:
   html: true
   linkify: true
