--- a/apps/rettangoli.dev/sites.config.yaml
+++ b/apps/rettangoli.dev/sites.config.yaml
@@ -1,11 +1,12 @@
 imports:
   templates:
-    base: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc7/sites/templates/rettangoli-dev/base.yaml
+    base: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc8/sites/templates/base.yaml
+    docs: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc8/sites/templates/docs.yaml
   partials:
-    seo1: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc7/sites/partials/rettangoli-dev/seo1.yaml
-    navbar1: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc7/sites/partials/rettangoli-dev/navbar1.yaml
-    mobile-nav1: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc7/sites/partials/rettangoli-dev/mobile-nav1.yaml
-    docs-sidebar1: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc7/sites/partials/rettangoli-dev/docs-sidebar1.yaml
+    seo: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc8/sites/partials/seo.yaml
+    navbar: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc8/sites/partials/navbar.yaml
+    mobile-nav: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc8/sites/partials/mobile-nav.yaml
+    docs-sidebar: https://cdn.jsdelivr.net/npm/@rettangoli/sites@1.0.0-rc8/sites/partials/docs-sidebar.yaml
 
 markdownit:
   html: true
